--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "generate-types": "npx supabase gen types typescript --project-id brtxcgrvidbdxsmskqgo --schema public > types_db.ts"
+    "generate-types": "npx supabase gen types typescript --project-id ydeyecytfulakfmpwavz --schema public > types_db.ts"
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.10",
